# APIWatchBot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  logging_config.py  main.py
app/ai/: client.py  processor.py  prompt.py
app/bot/: apis_registry.py  application.py  keyboards.py  user_repository.py
app/bot/handlers/: _helpers.py  about.py  apis.py  callbacks.py  help.py  pause.py  resume.py  settings.py  severity.py  start.py  stop.py  (+1 more)
app/collectors/: base.py  registry.py  runner.py  storage.py
app/db/: client.py  indexes.py
app/dispatcher/: delivery_repository.py  formatter.py  sender.py  urgent.py  weekly.py
app/models/: delivery.py  system_state.py  update.py  user.py
app/utils/: __init__.py  notify.py
docs/: Spec.md
tests/: test_ai_client.py  test_ai_processor.py  test_ai_prompt.py  test_bot_apis_registry.py  test_bot_handlers.py  test_bot_keyboards.py  test_bot_user_repository.py  test_collectors_base.py  test_collectors_runner.py  test_collectors_sources.py  test_dispatcher_delivery_repository.py  test_dispatcher_formatter.py  test_dispatcher_sender.py  test_dispatcher_urgent.py  test_dispatcher_weekly.py  test_html_utils.py  test_notify.py  test_smoke.py  test_worker.py
tests/fixtures/: google_business_changelog.html  google_gemini_changelog.html  meta_graph_changelog.html  openai_feed.xml  render_feed.xml  stripe_changelog.html  telegram_changelog.html  twilio_feed.xml  whatsapp_green_changelog.html  whatsapp_meta_changelog.html
worker/: __main__.py  scheduler.py
(+11 files in other folders)
