[project]
name = "apiwatchbot"
version = "0.1.0"
description = "Telegram bot that monitors 10 API providers and sends personalized updates in Hebrew."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-telegram-bot[webhooks]>=21.6",
    "motor>=3.6.0",
    "pymongo>=4.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "feedparser>=6.0.11",
    "apscheduler>=3.10.4",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "mongomock-motor>=0.0.34",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]  # מטופל ע"י formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
